syntax = "proto3";

package realworld.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "realworld-go-kratos/api/realworld/v1;v1";

service RealWorld {
  // 登录
  // @author liangguifeng
  rpc Login (LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/api/users/login",
      body: "*",
    };
  }

  // 注册
  // @author liangguifeng
  rpc Register (RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/api/users",
      body: "*",
    };
  }

  // 获取当前登录用户
  // @author liangguifeng
  rpc GetCurrentUser (GetCurrentUserRequest) returns (GetCurrentUserResponse) {
    option (google.api.http) = {
      get: "/api/users",
    };
  }

  // 更新当前登录用户
  // @author liangguifeng
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {
    option (google.api.http) = {
      put: "/api/users",
      body: "*",
    };
  }

  // 获取用户信息
  // @author liangguifeng
  rpc GetProfile (GetProfileRequest) returns (GetProfileResponse) {
    option (google.api.http) = {
      get: "/api/profiles/{username}",
    };
  }

  // 关注用户
  // @author liangguifeng
  rpc FollowUser (FollowUserRequest) returns (FollowUserResponse) {
    option (google.api.http) = {
      post: "/api/profiles/{username}/follow",
      body: "*",
    };
  }

  // 取消关注用户
  // @author liangguifeng
  rpc UnfollowUser (UnfollowUserRequest) returns (UnfollowUserResponse) {
    option (google.api.http) = {
      delete: "/api/profiles/{username}/follow",
    };
  }

  // 获取文章列表
  // @author liangguifeng
  rpc ListArticles (ListArticlesRequest) returns (ListArticlesResponse) {
    option (google.api.http) = {
      get: "/api/articles",
    };
  }

  // 获取喜好文章列表
  // @author liangguifeng
  rpc FeedArticles (FeedArticlesRequest) returns (FeedArticlesResponse) {
    option (google.api.http) = {
      get: "/api/articles/feed",
    };
  }

  // 获取文章详情
  // @author liangguifeng
  rpc GetArticle (GetArticleRequest) returns (GetArticleResponse) {
    option (google.api.http) = {
      get: "/api/articles/{slug}",
    };
  }

  // 创建文章
  // @author liangguifeng
  rpc CreateArticle (CreateArticleRequest) returns (CreateArticleResponse) {
    option (google.api.http) = {
      post: "/api/articles",
      body: "*",
    };
  }

  // 更新文章
  // @author liangguifeng
  rpc  UpdateArticle (UpdateArticleRequest) returns (UpdateArticleResponse) {
    option (google.api.http) = {
      put: "/api/articles/{slug}",
      body: "*",
    };
  }

  // 删除文章
  // @author liangguifeng
  rpc  DeleteArticle (DeleteArticleRequest) returns (DeleteArticleResponse) {
    option (google.api.http) = {
      delete: "/api/articles/{slug}",
    };
  }

  // 添加喜好文章
  // @author liangguifeng
  rpc FavoriteArticle (FavoriteArticleRequest) returns (FavoriteArticleResponse) {
    option (google.api.http) = {
      post: "/api/articles/{slug}/favorite",
      body: "*",
    };
  }

  // 取消喜好文章
  // @author liangguifeng
  rpc UnFavoriteArticle (UnFavoriteArticleRequest) returns (UnFavoriteArticleResponse) {
    option (google.api.http) = {
      delete: "/api/articles/{slug}/favorite",
    };
  }

  // 对文章添加评论
  // @author liangguifeng
  rpc  AddCommentsToAnArticle (AddCommentsToAnArticleRequest) returns (AddCommentsToAnArticleResponse) {
    option (google.api.http) = {
      post: "/api/articles/{slug}/comments",
      body: "*",
    };
  }

  // 获取文章评论
  // @author liangguifeng
  rpc  GetCommentsFromAnArticle (GetCommentsFromAnArticleRequest) returns (GetCommentsFromAnArticleResponse) {
    option (google.api.http) = {
      get: "/api/articles/{slug}/comments",
    };
  }

  // 删除文章评论
  // @author liangguifeng
  rpc  DeleteComment (DeleteCommentRequest) returns (DeleteCommentResponse) {
    option (google.api.http) = {
      delete: "/api/articles/{slug}/comments/{id}",
    };
  }

  // 获取所有标签
  // @author liangguifeng
  rpc GetTags (GetTagsRequest) returns (GetTagsResponse) {
    option (google.api.http) = {
      get: "/api/tags",
    };
  }
}

message LoginRequest {
  message LoginUser {
    // 用户名
    // @required
    string email = 1;
    // 密码
    // @required
    string password = 2;
  }

  LoginUser user = 1;
}

message LoginResponse {

}

message RegisterRequest {
  message RegisterUser {
    // 用户名
    // @required
    string username = 1;
    // 邮箱
    // @required
    string email = 2;
    // 密码
    // @required
    string password = 3;
  }

  RegisterUser user = 1;
}

message RegisterResponse {

}

message GetCurrentUserRequest {

}

message GetCurrentUserResponse {

}

message UpdateUserRequest {

}

message UpdateUserResponse {

}

message GetProfileRequest {
  string username = 1;
}

message GetProfileResponse {

}

message FollowUserRequest {
  string username = 1;
}

message FollowUserResponse {

}

message UnfollowUserRequest {
  string username = 1;
}

message UnfollowUserResponse {

}

message ListArticlesRequest {
  // 文章标签
  string tag = 1;
  // 文章作者
  string author = 2;
  // 用户偏好
  string favorited = 3;
  // 取出条数
  uint64 limit = 4;
  // 取数起止位置
  uint64 offset = 5;
}

message ListArticlesResponse {

}

message FeedArticlesRequest {
  // 取出条数
  uint64 limit = 1;
  // 取数起止位置
  uint64 offset = 2;
}

message FeedArticlesResponse {

}

message GetArticleRequest {
  string slug = 1;
}

message GetArticleResponse {

}

message CreateArticleRequest {
  message Article {
    // 标题
    // @required
    string title = 1;
    // 描述
    // @required
    string description = 2;
    // 内容
    // @required
    string body = 3;
    // 选中标签
    repeated string tagList = 4;
  }

  Article article = 1;
}

message CreateArticleResponse {

}

message UpdateArticleRequest {
  // 文章标识
  string slug = 1;

  message Article {
    // 标题
    string title = 1;
    // 描述
    string description = 2;
    // 内容
    string body = 3;
  }

  Article article = 2;
}

message UpdateArticleResponse {

}

message DeleteArticleRequest {
  string slug = 1;
}

message DeleteArticleResponse {

}

message FavoriteArticleRequest {
  string slug = 1;
}

message FavoriteArticleResponse {

}

message UnFavoriteArticleRequest {
  string slug = 1;
}

message UnFavoriteArticleResponse {

}

message AddCommentsToAnArticleRequest {
  string slug = 1;
}

message AddCommentsToAnArticleResponse {

}

message GetCommentsFromAnArticleRequest {
  string slug = 1;
}

message GetCommentsFromAnArticleResponse{

}

message DeleteCommentRequest {
  string slug = 1;
  string id = 2;
}

message DeleteCommentResponse {

}

message GetTagsRequest {

}

message GetTagsResponse {

}

message User {
  // 邮箱
  string email = 1;
  // token
  string token = 2;
  // 用户名
  string username = 3;
  // 自我介绍
  string bio = 4;
  // 头像
  string image = 5;
}

message Profile {
  // 用户名
  string username = 1;
  // 自我介绍
  string bio = 2;
  // 头像
  string image = 3;
  // 是否关注
  bool following = 4;
}

message Article {
  // 标识
  string slug = 1;
  // 标题
  string title = 2;
  // 描述
  string description = 3;
  // 文章内容
  string body = 4;
  // 标签列表
  repeated string tagList = 5;
  // 创建时间
  google.protobuf.Timestamp createdAt = 6;
  // 更新时间
  google.protobuf.Timestamp updatedAt = 7;
  // 是否喜好
  bool favorited = 8;
  // 喜好总数
  uint32 favoritesCount = 9;
  // 作者信息
  Profile author = 10;
}

message Comment {
  // 评论id
  uint32 id = 1;
  // 创建时间
  google.protobuf.Timestamp createdAt = 2;
  // 更新时间
  google.protobuf.Timestamp updatedAt = 3;
  // 评论内容
  string body = 4;
  // 评论人信息
  Profile author = 5;
}
